modificaciones de algunas rutas y documentacion y el controlador de areas y verifiacion
