# Backend/src/routes/SitiosRouters.js
@@ -3,10 +3,10 @@ import { Registrar_Sitio,Actualizar_Sitio,Desactivar_Sitio,Listar_Sitios} from '
 
 const router = Router();
 
-router.post("/Sitio",Registrar_Sitio)
-router.put("/Sitio/:id_sitio",Actualizar_Sitio)
-router.put("/Sitio/estado/:id_sitio",Desactivar_Sitio)
-router.get("/Sitio",Listar_Sitios)
+router.post("/sitio",Registrar_Sitio)
+router.put("/sitio/:id_sitio",Actualizar_Sitio)
+router.put("/sitio/estado/:id_sitio",Desactivar_Sitio)
+router.get("/sitio",Listar_Sitios)
 
 
 export default router;
